Popup: Chrome bugfix: Wrap the levels list.
The levels list was overflowing in Google Chrome.

--- a/common/popup.css
+++ b/common/popup.css
@@ -50,6 +50,7 @@ h3 {
 #level-select {
 	display: flex;
 	flex-flow: row;
+	flex-wrap: wrap;
 	justify-content: center;
 }
 
